--- a/style.css
+++ b/style.css
@@ -1,94 +1,137 @@
-
-body {
-  font-family: 'Noto Sans', sans-serif;
+*body {
+  font-family: "Noto Sans", sans-serif;
 }
 
-h1, h2, h3, h4 {
-  font-family: 'Roboto Mono', monospace;
+h1,
+h2,
+h3,
+h4 {
+  font-family: "Roboto Mono", monospace;
 }
 
-.container { 
-	max-width: 840px;
-	margin: 0 auto;
- }
- 
+.container {
+  max-width: 840px;
+  margin: 0 auto;
+}
+
 .intro {
-	text-align: center;
+  text-align: center;
 }
-.about-grid{
-	display: grid;
-	grid-template-columns: 50% 50%;
-	text-align: center;
+.about-grid {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  text-align: center;
 }
-.I-am,.I-like{
-	text-align:center;
+.I-am,
+.I-like {
+  text-align: center;
 }
-.about-list{
-	list-style: none;
+.about-list {
+  list-style: none;
 }
 
 @media (max-width: 480px) {
-	.about-grid{
- grid-template-columns:100%;
- }
+  .about-grid {
+    grid-template-columns: 100%;
+  }
 }
 
-.project-heading{
-	text-align: center;
+.project-heading {
+  text-align: center;
 }
-.project-grid{
-	display: grid;
-	grid-template-columns: 50% 50%;
+.project-grid {
+  display: grid;
+  grid-template-columns: 50% 50%;
 }
-.project-image-wrapper{
-	justify-self: center;
-	padding: 4%;
-	position: relative;
+.project-image-wrapper {
+  justify-self: center;
+  padding: 4%;
+  position: relative;
 }
-.project-images{
-	border-radius:50px;
-	box-shadow: 0 4px 6px 0 rgba(34,60,80 0.16);
-	transition: all ease-in-out.2%;
+.project-images {
+  border-radius: 50px;
+  box-shadow: 0 4px 6px 0 rgba(34, 60, 80 0.16);
+  transition: all ease-in-out.2%;
 }
-.project-images:hover{
-	filter: brightness(.75%);
-	box-shadow: 0 8px 12px 0 rgba(34,60,80 0.16);
+.project-images:hover {
+  filter: brightness(0.75%);
+  box-shadow: 0 8px 12px 0 rgba(34, 60, 80 0.16);
 }
 .project-image-wrapper:hover > h4 {
-	visibility: visible;
+  visibility: visible;
 }
 .project-image-wrapper > h4 {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	color: white;
-	visibility: hidden;
-	z-index: 2;
-	transition: ease-in-out.2%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  visibility: hidden;
+  z-index: 2;
+  transition: ease-in-out.2%;
 }
 
-@media (max-width:650px ) {
-	.project-grid{
-		grid-template-columns: 100%;
-	}
+@media (max-width: 650px) {
+  .project-grid {
+    grid-template-columns: 100%;
+  }
 }
-.links-and-contact{
-	display: grid;
-	grid-template-columns: 30% 70%;
+.links-and-contact {
+  display: grid;
+  grid-template-columns: 30% 70%;
 }
-.links{
-	justify-self: center;
+.links {
+  justify-self: center;
 }
-@media (max-width:650px) {
-	.links-and-contact{
-		grid-template-columns:100% ;
-	}
+@media (max-width: 650px) {
+  .links-and-contact {
+    grid-template-columns: 100%;
+  }
 }
-.profile-picture{
-	border-radius:50%;
-	width:150px;
-	height: 150px;
+.profile-picture {
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  box-shadow: 0 4px 6px 0 rgba(34, 60, 80, 0.16);
+  transition: all ease-in-out 0.2%;
+}
+.profile-picture:hover {
+  box-shadow: 0 4px 6px 0 rgba(34, 60, 80, 0.16);
+}
+
+body {
+  background-color: #caebf2;
+}
+
+.container > div {
+  margin: 20px auto;
+}
+
+hr {
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0.75),
+    rgba(0, 0, 0, 0)
+  );
+}
+.form-input-textarea {
+  padding: 5px;
+  border-radius: 5px;
+  width: 240px;
+}
+form input [type="Submit"] {
+  width: 250px;
+  border: 5px solid black;
+}
+#submit-button,
+input,
+textarea {
+  margin: 20px 0;
+  border: 2px solid black;
+	height: 50px;
 	box-shadow:0 4px 6px 0 rgba(34,60, 80, 0.16);
 	transition: all ease-in-out .2%;
 }
